# colorist

./: .gitignore  FAQ.md  LICENSE-references  LIMITS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: cinematography.md  color-theory.md  detail-qc.md  industry-standards.md  look-design.md
docs/: design.md  evaluation-harness.md  spike-verdict.md
docs/research/: 2026-07-23-citation-verification-audit.md  practitioner-notes.md
docs/research/measurements/: 2026-07-23-corpus-carrier-floor.md  2026-07-23-first-validation-run.md  2026-07-23-hue-linearity.md  2026-07-23-saturation-hue-drift.md  2026-07-23-skin-line.md  2026-07-23-transfer-convention.md  2026-07-23-white-balance-accuracy.md
presets/delivery/: h264-yt-sdr.yaml  prores-422hq.yaml
references/: CITATIONS.yaml  INDEX.md  corpus-manifest.yaml
references/cinematography/: color-temperature-on-set.md  exposure-placement.md  lighting-and-story.md  reading-a-shot.md  what-grade-can-and-cannot-fix.md
references/color-theory/: color-appearance-basics.md  color-difference.md  color-spaces-and-gamuts.md  correction-math.md  luts-explained.md  skin-targets-measured.md  transfer-functions-and-log.md  uniform-spaces-for-grading.md  white-balance-accuracy-measured.md  white-balance-and-illuminants.md
references/detail-qc/: common-defects-catalog.md  cross-shot-consistency.md  measurement-methodology.md  qc-gates-reference.md  scopes-and-measurements.md
references/industry-standards/: aces-and-color-management-literacy.md  delivery-specs-landscape.md  ffmpeg-color-capabilities.md  research-method.md
references/look-design/: building-a-look-stack.md  film-emulation-basics.md  look-archetypes.md  look-intent-and-waivers.md  taste-and-references.md
src/colorist/: __init__.py  __main__.py  corpus.py  corrections.py  cuts.py  ffgraph.py  gates.py  grade.py  idt.py  lut.py  measure.py  render.py  scorecard.py  tools.py  verify.py  workflow.py
src/colorist/presets/gates/: interview.yaml
tests/: conftest.py  test_citations.py  test_corpus.py  test_corrections.py  test_cuts.py  test_e2e_consistency.py  test_ffgraph.py  test_gates.py  test_grade.py  test_idt.py  test_lut.py  test_lut_agreement.py  test_measure.py  test_measure_encoding.py  test_packaging.py  test_qc_delivery_cli.py  test_render_identity.py  test_scorecard.py  test_smoke_real_clip.py  test_tools.py  test_verify.py
tests/assets/: ATTRIBUTION.md  smoke_scenes.mp4.license
tests/fixtures/: identity17.cube
tests/vectors/: clog3_cgamut.json  logc3ei800_awg3.json  logc4_awg4.json  slog3_sgamut3cine.json  vlog_vgamut.json  vlog_vgamut.json.license
tools/: fetch_vendor_docs.sh  make_test_clip.py  measure_corpus_floor.py  measure_hue_linearity.py  measure_saturation_hue_drift.py  measure_skin_line.py  measure_transfer_convention.py  measure_white_balance.py  run_validation.py  verify_citations.py  write_corpus_manifest.py
