# SPDX-License-Identifier: MIT
[project]
name = "colorist"
version = "0.1.0"
description = "An AI colorist that measures before it grades"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = ["color-grading", "colorist", "ffmpeg", "video", "qc", "log", "rec709"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = [
    "colour-science==0.4.7",
    "numpy>=2,<3",
    "pyyaml>=6",
    "scipy>=1.11,<2",
]

[project.urls]
Homepage = "https://github.com/sach98/colorist"
Source = "https://github.com/sach98/colorist"
Issues = "https://github.com/sach98/colorist/issues"

[project.scripts]
colorist = "colorist.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colorist = ["presets/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:.*"Matplotlib" related API features are not available.*',
]
